# harness-notify

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: verify.yml
src/: cli.rs  config.rs  config_ops.rs  events.rs  gui.rs  main.rs  notify.rs  os_check.rs  resolve.rs
src/adapters/: antigravity.rs  claude_code.rs  kimi.rs  mod.rs  opencode.rs  unsupported.rs
tests/: config_cli.rs  exit_codes.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/templates/: config-command.md
